<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ATalk</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <!-- login layout -->
    <string name="login_username_hint">请输入账号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_btn_txt">登录</string>
    <string name="login_register_txt">新用户注册</string>
    
    <!-- main layout -->
	<string name="main_contacts_txt">联系人</string>
	<string name="main_message_txt">消息</string>
	<string name="main_discover_txt">动态</string>
	
	<!-- message layout -->
	<string name="message_title_txt">消息列表</string>
	
	<!-- contacts layout -->
	<string name="contacts_title_txt">联系人</string>
	<string name="contacts_addFriend_txt">添加好友</string>
	<string name="contacts_group_txt">好友分组</string>
</resources>