<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp" 
        android:background="@drawable/view_pic_title_bg"
        >

        <TextView
            android:id="@+id/contacts_addFirend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textSize="@dimen/contacts_addFriend_txtsize"
            android:textColor="#FFFFFF"
            android:text="@string/contacts_addFriend_txt" />

        <TextView
            android:id="@+id/contacts_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/contacts_title_txt"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/contacts_title_txtsize" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/contacts_group_txtsize"
        android:text="@string/contacts_group_txt" />

    <ExpandableListView
        android:id="@+id/contacts_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ExpandableListView>

</LinearLayout>